[package]
name = "eapol_scrape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0" }
clap = { features = ["derive"], version = "4.2" }
hex = { version = "0.4" }
pcap = { version = "1.0" }
pnet = { version = "0.33" }
